# LoRA_E5

./: .gitignore  Makefile  dockerfile  pyproject.toml
script/: peft_lora_embedding_semantic_search.py  requirements.txt  run.sh
